test/fail/ac/ruleboolexp.app
//rule should contain a Bool expression
application test

define page root() {
}

access control rules

  rule page name()
  {
    1+1
  }
